gccida/g0/copy_insn_list
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1817:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pattern = ( rtx)insn[2]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1821:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1829:13: error: expected identifier or '('
 struct set = v3; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1838:5: error: expected expression
&&  struct set 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1849:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = (  struct rtx_def *)copy[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1860:51: error: use of undeclared identifier 'machine_mode'
new_set->fld[0].rtwint = ( __int64)gen_reg_rtx( ( machine_mode)*( unsigned __int8 *)( new_set->fld[0].rtwint + 2)); 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1872:5: error: expected expression
&&  struct set 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1878:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)static_chain_incoming_rtx + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1890:5: error: expected expression
&&  struct set 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1899:12: error: expected expression
else if (  struct set && rtx_equal_p( set->fld[0].rtx, global_rtl[7]) ) 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:1915:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
temp = ( rtx)set[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/integrate.c:2012:35: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
copy[3].fld[0].rtwint = ( __int64)insn[2]; 
                                  ^~~~~~~
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_insn_list/src/obj/integrate.o] Error 1
